# cit-thesis-khadim-fall-2025

./: .gitignore  Dockerfile.backend-streaming  Dockerfile.frontend-standalone  Dockerfile.frontend-streaming  Makefile  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/backend-streaming/: .gitignore  Makefile  pyproject.toml
apps/backend-streaming/config/: zenoh_config.json5.example
apps/backend-streaming/shared/: Depth Processor.csv  Pointcloud Transformer.csv  Remote Camera.csv  Render Loop.csv  Tetris Buffer.csv
apps/backend-streaming/src/: main.py
apps/backend-streaming/src/browser/: camera.py  webrtc.py
apps/backend-streaming/src/core/: core.py  pipeline.py  shutdown.py  state.py
apps/backend-streaming/src/performance/: fps_counter.py
apps/backend-streaming/src/rendering/: camera_display.py  init.py  renderer.py
apps/backend-streaming/src/rendering/depth2points/: processor.py
apps/backend-streaming/src/rendering/grid/: renderer.py
apps/backend-streaming/src/rendering/pointcloud/: renderer.py
apps/backend-streaming/src/rendering/pointcloud_transformer/: extrinsics_utils.py  transformer.py
apps/backend-streaming/src/streaming/: camera.py  camera_descriptions.py  camera_stream_decoder.py  decoder_mp4.py  decoder_zdepth.py  zenoh_cdr.py
apps/backend-streaming/src/tetris_buffer/: __init__.py  engine.py  init.py  sorted_buffer.py  test_engine.py
apps/backend-streaming/src/ui/: canvas.py  render_loop.py  ui.py
apps/backend-streaming/src/xylt_processor/: __init__.py  process.py
(+108 files in other folders)
